--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,20 +24,32 @@ jobs:
         run: |
           echo "Checking workflow statuses..."
           
-          # Get recent workflow runs for Windows
+          # Get recent workflow runs for Windows by workflow name
           WINDOWS_STATUS=$(curl -s \
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            "https://api.github.com/repos/${{ github.repository }}/actions/workflows/windows.yml/runs?branch=main&per_page=1" | \
+            "https://api.github.com/repos/${{ github.repository }}/actions/workflows" | \
+            jq -r '.workflows[] | select(.name=="Build Windows Executable") | .id' | \
+            xargs -I{} curl -s \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            "https://api.github.com/repos/${{ github.repository }}/actions/workflows/{}/runs?branch=main&per_page=1" | \
             jq -r '.workflow_runs[0].conclusion')
           
-          # Get recent workflow runs for Linux
+          # Get recent workflow runs for Linux by workflow name
           LINUX_STATUS=$(curl -s \
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            "https://api.github.com/repos/${{ github.repository }}/actions/workflows/linux.yml/runs?branch=main&per_page=1" | \
+            "https://api.github.com/repos/${{ github.repository }}/actions/workflows" | \
+            jq -r '.workflows[] | select(.name=="Build Linux AppImage") | .id' | \
+            xargs -I{} curl -s \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            "https://api.github.com/repos/${{ github.repository }}/actions/workflows/{}/runs?branch=main&per_page=1" | \
             jq -r '.workflow_runs[0].conclusion')
           
           echo "Windows build status: $WINDOWS_STATUS"
